--- a/project/myCrossing/src/app/navbar/navbar.component.html
+++ b/project/myCrossing/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div id="nav">
-  <img routerLink="" src="../../assets/images/logo.png"/>
+  <img (click)="irInicio()" src="../../assets/images/logo.png"/>
 
   <div id="menu">
     <button [class]="_comunicacion.activar ? 'activado':''" class="button-nav" routerLink="/cat-caza-insectos" routerLinkActive="activo">Cazar ahora</button>
