Vista peces terminada
-Cambiado menu show

-Cambiado funcionamiento boton hemisferio

-Cambiado funcionamiento meses

--- a/project/myCrossing/src/styles.css
+++ b/project/myCrossing/src/styles.css
@@ -147,6 +147,15 @@ label{
   justify-content: center;
 }
 
+.no-pointer{
+  cursor: auto;
+}
+.flex-between{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .check-button-empty{
   background-color: blue;
 }
