--- a/project/myCrossing/src/app/cat-insectos/cat-insectos.component.html
+++ b/project/myCrossing/src/app/cat-insectos/cat-insectos.component.html
@@ -1,5 +1,5 @@
 <!-- Filtros búsqueda -->
-<div class="content-wrapper-top" style="background-color: #e2d4b9;">
+<div class="content-wrapper-top" style="background-color: #62b179;">
   <div style="margin-top: 4vw;">
     <h2>Catálogo de insectos</h2>
     <div id="wrap-filtros" class="flex-centered" style="align-items: unset;">
@@ -106,7 +106,7 @@
             <button [style.background-image]="this.listaUsuario.includes(creature.translations.spanish.replace(' ','')) ? 'url(../../assets/images/check-rojo.png)' : 'url(../../assets/images/check-gris.png)'" class="boton-imagen editar" (click)="toggleCheck(creature)"></button>
           </div>
           <div style="width: 8vw; height: 8vw;" class="flex-centered">
-            <img (click)="mostrar(creature)" [src]="creature.critterpediaImage" style="cursor: pointer;max-width: 100%;max-height: 100%;" [id]='creature.translations.spanish.replace(" ", "")'>
+            <img (click)="mostrar($event, creature)" [src]="creature.critterpediaImage" style="cursor: pointer;max-width: 100%;max-height: 100%;" [id]='creature.translations.spanish.replace(" ", "")'>
           </div>
           <span>{{creature.translations.spanish | capitalize}}</span>
         </div>
@@ -172,21 +172,34 @@
 
 </div>
   <!--   Pop-ups   -->
-<div class="oscuro" (click)="hide=true" [style.display]="hide ? 'none': 'block'"></div>
-<div class="panel" [style.display]="hide ? 'none': 'block'">
-  <div style="width: 100%; text-align: -webkit-center; display: flex; justify-content: space-around;">
-    <span class="spanImg" (click)="isNorth=!isNorth" style="background-color:#67c13db5; cursor:pointer;">
-      <img [src]="isNorth ? '../../assets/images/hemisferio-norte.png' : '../../assets/images/hemisferio-sur.png'" class="imagenHemisferio">
-  </span>
-    <div class="grid-item-wrap flex-column-centered" style="width: fit-content;">
-      <img [src]="shownCreature.critterpediaImage" style="width: 9vw; padding: 1vw; max-height: 12vw;" [id]='shownCreature.translations.spanish.replace(" ", "")'>
+<div class="panel flex-between" [style.display]="hide ? 'none': 'flex'" (clickOutside)="cierraMenu()">
+
+  <img (click)="cambiaHemisferio()" [src]="isNorth ? '../../assets/images/hemisferio-norte.png' : '../../assets/images/hemisferio-sur.png'" class="img-radio editar editar-left" style="width: unset;height: unset;">
+
+  <div class="flex-column-centered" style="margin-left:3vw;max-width: 60%;max-height: 31vw;">
+    <div class="flex-column-centered">
+      <img [src]="shownCreature.critterpediaImage" style="max-width: 100%;max-height: 10vw" [id]='shownCreature.translations.spanish.replace(" ", "")'>
+      <p><strong>{{shownCreature.translations.spanish | capitalize}}</strong></p>
+    </div>
+    <div>
+      <p><strong>Donde obtener:</strong> {{shownCreature.whereHow | traducir | capitalize}}</p>
+      <p><strong>Clima:</strong> {{shownCreature.weather | traducir | capitalize}}</p>
+      <p><strong>Precio:</strong> {{shownCreature.sell}}</p>
+      <div style="display: flex;">
+        <span><strong>Horario:</strong></span>
+        <div class="flex-column-centered" style="margin-left: 0.4vw;">
+          <ng-container *ngFor="let hora of this.shownCreatureHoras">
+            <span>{{hora | traducir }}</span>
+          </ng-container>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="datos"><b>Nombre:</b> {{shownCreature.translations.spanish | capitalize}}</div>
-  <div class="datos"><b>Donde obtener:</b> {{shownCreature.whereHow | traducir | capitalize}}</div>
-  <div class="datos"><b>Clima:</b> {{shownCreature.weather | traducir | capitalize}}</div>
-  <div class="datos"><b>Precio:</b> {{shownCreature.sell}}</div>
-  <div class="datos"><b>Meses capturable:</b> {{((isNorth) ? shownCreature.hemispheres.north.monthsArray : shownCreature.hemispheres.south.monthsArray) | mesesTextuales}}</div>
-  <div class="datos" style="margin-bottom: 0px;"><b>Horario de captura:</b> {{((isNorth) ? shownCreature.hemispheres.north.time : shownCreature.hemispheres.south.time) | traducir}}</div>
+
+  <div class="flex-column-centered">
+    <ng-container *ngFor="let mes of meses | keyvalue">
+      <span class="boton-alargado no-pointer" style="margin: 0.2vw 0;width: 100%;" [class]="shownCreatureMeses.includes(mes.key)? 'b-verde' : 'b-azul'">{{mes.value}}</span>
+    </ng-container>
+  </div>
 </div>
 
