Solo faltan los filtros

--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -50,7 +50,7 @@
     <p id="titulo">¡Una isla llena de vida!</p>
     <div class="grid-inicio grid-4">
       <img src="../../assets/images/regando-big.png">
-      <button id="vecinos" class="bckg-img-boton"><h2>Vecinos</h2></button>
+      <button id="vecinos" routerLink="/catalogo-vecinos" class="bckg-img-boton"><h2>Vecinos</h2></button>
       <button id="calendario" class="bckg-img-boton"><h2>Calendario</h2></button>
     </div>
   </div>
