--- a/project/myCrossing/src/app/cazar-ahora/cat-caza-peces/cat-caza-peces.component.html
+++ b/project/myCrossing/src/app/cazar-ahora/cat-caza-peces/cat-caza-peces.component.html
@@ -1,55 +1,65 @@
 <!-- Filtros búsqueda -->
-<div class="content-wrapper-top" style="background-color: #e2d4b9;">
+<div class="content-wrapper-top" style="background-color: #93c8ff;">
     <div style="margin-top: 4vw;">
-        <h2>¡Caza peces!</h2>
-        <button class="boton-alargado" style="margin-bottom: 1vw; margin-right: 1vw;" (click)="toggleFiltrando()">{{filtrando ? "Ocultar":"Mostrar"}} filtros</button>
-        <button class="boton-alargado" style="margin-bottom: 1vw; margin-right: 1vw;" (click)="cambiaSer('insectos')">Insectos</button>
-        <button class="boton-alargado b-verde" style="margin-bottom: 1vw; margin-right: 1vw;">Peces</button>
-        <button class="boton-alargado" style="margin-bottom: 1vw; margin-right: 1vw;" (click)="cambiaSer('criaturasMarinas')">Criaturas marinas</button>
-        <div class="flex-centered" [style.display]="filtrando ? 'flex' : 'none'" style="padding-bottom: 1vw;">
-            <div class="bigFilterContainerBrown">
-                <div style="font-size: 1.5vw; padding-left: 2vw; padding-top: 0.5vw;"><b>Sombra</b></div>
-                <button class="boton-alargado shadowButton" (click)="filtraShadow('X-Small')" [class]="this.filtroAcShadow == 'X-Small' ? 'b-verde' : 'b-azul'" style="grid-column: 1;">Diminuta</button>
-                <button class="boton-alargado shadowButton" (click)="filtraShadow('Small')" [class]="this.filtroAcShadow == 'Small' ? 'b-verde' : 'b-azul'" style="grid-column: 2;">Pequeña</button>
-                <button class="boton-alargado shadowButton" (click)="filtraShadow('Medium')" [class]="this.filtroAcShadow == 'Medium' ? 'b-verde' : 'b-azul'" style="grid-column: 3;">Mediana</button>
-                <button class="boton-alargado shadowButton" (click)="filtraShadow('Large')" [class]="this.filtroAcShadow == 'Large' ? 'b-verde' : 'b-azul'" style="grid-column: 4;">Grande</button>
-                <button class="boton-alargado shadowButton" (click)="filtraShadow('X-Large')" [class]="this.filtroAcShadow == 'X-Large' ? 'b-verde' : 'b-azul'" style="grid-column: 1;">Muy grande</button>
-                <button class="boton-alargado shadowButton" (click)="filtraShadow('XX-Large')" [class]="this.filtroAcShadow == 'XX-Large' ? 'b-verde' : 'b-azul'" style="grid-column: 2;">Gigante</button>
-                <button class="boton-alargado shadowButton" (click)="filtraShadow('X-Large w/Fin')" [class]="this.filtroAcShadow == 'X-Large w/Fin' ? 'b-verde' : 'b-azul'" style="grid-column: 3;">Muy grande con aleta</button>
-                <button class="boton-alargado shadowButton" (click)="filtraShadow('Long')" [class]="this.filtroAcShadow == 'Long' ? 'b-verde' : 'b-azul'" style="grid-column: 4;">Alargada</button>
+        <h2>¿Qué puedo cazar ahora?</h2>
+
+        <img (click)="cambiaHemisferio()" [src]="isNorth ? '../../../assets/images/hemisferio-norte.png': '../../../assets/images/hemisferio-sur.png'" class="editar editar-top-left img-radio" style="width: unset;height: unset;">
+
+        <div id="wrap-filtros" class="flex-centered" style="align-items: unset;">
+          <div style="width: 35%;justify-content:unset" class="flex-column-centered">
+            <h3>Sombra</h3>
+            <div class="flex-centered" style="flex-wrap: wrap;" id="filtro-sombra">
+              <button class="boton-alargado" (click)="filtraShadow('X-Small')" [class]="this.filtroAcShadow == 'X-Small' ? 'b-verde' : 'b-azul'" style="grid-column: 1;">Diminuta</button>
+              <button class="boton-alargado" (click)="filtraShadow('Small')" [class]="this.filtroAcShadow == 'Small' ? 'b-verde' : 'b-azul'" style="grid-column: 2;">Pequeña</button>
+              <button class="boton-alargado" (click)="filtraShadow('Medium')" [class]="this.filtroAcShadow == 'Medium' ? 'b-verde' : 'b-azul'" style="grid-column: 3;">Mediana</button>
+              <button class="boton-alargado" (click)="filtraShadow('Large')" [class]="this.filtroAcShadow == 'Large' ? 'b-verde' : 'b-azul'" style="grid-column: 4;">Grande</button>
+              <button class="boton-alargado" (click)="filtraShadow('X-Large')" [class]="this.filtroAcShadow == 'X-Large' ? 'b-verde' : 'b-azul'" style="grid-column: 1;">Muy grande</button>
+              <button class="boton-alargado" (click)="filtraShadow('XX-Large')" [class]="this.filtroAcShadow == 'XX-Large' ? 'b-verde' : 'b-azul'" style="grid-column: 2;">Gigante</button>
+              <button class="boton-alargado" (click)="filtraShadow('X-Large w/Fin')" [class]="this.filtroAcShadow == 'X-Large w/Fin' ? 'b-verde' : 'b-azul'" style="grid-column: 3;">Muy grande con aleta</button>
+              <button class="boton-alargado" (click)="filtraShadow('Long')" [class]="this.filtroAcShadow == 'Long' ? 'b-verde' : 'b-azul'" style="grid-column: 4;">Alargada</button>
             </div>
-            <div class="bigFilterContainerYellow">
-                <div style="font-size: 1.5vw; padding-left: 2vw; padding-top: 0.5vw;"><b>Lugares</b></div>
-                <button class="boton-alargado whereButton" (click)="filtraWhe('Pond')" [class]="this.filtroAcWhe == 'Pond' ? 'b-verde' : 'b-azul'">Estanque</button>
-                <button class="boton-alargado whereButton" (click)="filtraWhe('River')" [class]="this.filtroAcWhe == 'River' ? 'b-verde' : 'b-azul'">Río</button>
-                <button class="boton-alargado whereButton" (click)="filtraWhe('Sea')" [class]="this.filtroAcWhe == 'Sea' ? 'b-verde' : 'b-azul'">Mar</button>
-                <button class="boton-alargado whereButton" (click)="filtraWhe('Pier')" [class]="this.filtroAcWhe == 'Pier' ? 'b-verde' : 'b-azul'">Muelle</button>
+          </div>
+          <div style="width: 20%;justify-content: unset;margin: 0 1vw" class="flex-column-centered">
+            <h3>Lugares</h3>
+            <div style="flex-wrap: wrap;" id="filtro-lugar">
+              <button class="boton-alargado" (click)="filtraWhe('Pond')" [class]="this.filtroAcWhe == 'Pond' ? 'b-verde' : 'b-azul'">Estanque</button>
+              <button class="boton-alargado" (click)="filtraWhe('River')" [class]="this.filtroAcWhe == 'River' ? 'b-verde' : 'b-azul'">Río</button>
+              <button class="boton-alargado" (click)="filtraWhe('Sea')" [class]="this.filtroAcWhe == 'Sea' ? 'b-verde' : 'b-azul'">Mar</button>
+              <button class="boton-alargado" (click)="filtraWhe('Pier')" [class]="this.filtroAcWhe == 'Pier' ? 'b-verde' : 'b-azul'">Muelle</button>
             </div>
-            <div style="margin-right: 1vw; width: 10vw;">
-                <div [style.display]="this._verif.user == null ? 'none' : 'block'">
-                  <button class="boton-alargado extraButton" (click)="activaFiltro('obtenido')" [class]="this.botonFiltrar == 'obtenido' ? 'b-verde' : 'b-azul'">Obtenidos</button>
-                  <button class="boton-alargado extraButton" (click)="activaFiltro('falta')" [class]="this.botonFiltrar == 'falta' ? 'b-verde' : 'b-azul'">Me faltan</button>
-                </div>
-                <div style="display: inline-flex; margin-left: 1vw; margin-top: 1vw;"><b style="font-size: 1.5vw;">Hora:</b><input class="tiempo" [formControl]="hora" type="number" placeholder="24"></div>
-                <div style="display: inline-flex; margin-left: 1vw; margin-top: 1vw;">
-                  <b style="font-size: 1.5vw;">Mes:</b>
-                  <select class="tiempo selectMonth" [formControl]="mes">
-                    <option value="1">Enero</option>
-                    <option value="2">Febrero</option>
-                    <option value="3">Marzo</option>
-                    <option value="4">Abril</option>
-                    <option value="5">Mayo</option>
-                    <option value="6">Junio</option>
-                    <option value="7">Julio</option>
-                    <option value="8">Agosto</option>
-                    <option value="9">Septiembre</option>
-                    <option value="10">Octubre</option>
-                    <option value="11">Noviembre</option>
-                    <option value="12">Diciembre</option>
-                  </select>
+          </div>
+
+          <div class="flex-column-centered" style="width: 35%;">
+            <input [formControl]="busqueda" class="text-input" style="width: 80%;margin-top: 2vw" type="text" placeholder="Buscar">
+            <div class="flex-centered">
+              <div class="flex-centered">
+                <button (click)="volverFechaActual()" id="volver" class="boton-imagen" style="margin-right:1vw"></button>
+                <div class="flex-column-centered" id="time-wrap">
+                  <div class="flex-centered" style="margin-top:1vw">
+                    <h4>Hora:</h4>
+                    <input class="text-input input-hora" [formControl]="hora" type="number">
+                  </div>
+                  <div class="flex-centered">
+                    <h4>Mes:</h4>
+                    <select class="text-input input-mes" [formControl]="mes">
+                      <ng-container *ngFor="let mes of meses | keyvalue">
+                        <option value="{{mes.key}}">{{mes.value}}</option>
+                      </ng-container>
+                    </select>
+                  </div>
                 </div>
               </div>
-            <input [formControl]="busqueda" type="text" placeholder="Buscar" [style.width]="this._verif.user == null ? '50%' : '30%'">
+              <div class="flex-column-centered" style="margin:0.5vw" [style.display]="this._verif.user == null ? 'none' : 'flex'" id="filtro-usuario">
+                <button class="boton-alargado" (click)="activaFiltro('obtenido')" [class]="this.botonFiltrar == 'obtenido' ? 'b-verde' : 'b-azul'">Obtenidos</button>
+                <button class="boton-alargado" (click)="activaFiltro('falta')" [class]="this.botonFiltrar == 'falta' ? 'b-verde' : 'b-azul'">Me faltan</button>
+              </div>
+            </div>
+          </div>
+          <div class="flex-column-centered" style="width: 5vw;" id="ser-wrap">
+            <button class="boton-imagen b-azul" [style.background-image]="'url(../../../assets/images/insecto-icon.png)'" (click)="cambiaSer('insectos')"></button>
+            <button class="boton-imagen b-verde" [style.background-image]="'url(../../../assets/images/pez-icon.png)'"></button>
+            <button class="boton-imagen b-azul" [style.background-image]="'url(../../../assets/images/criatura-marina-icon.png)'" (click)="cambiaSer('criaturasMarinas')"></button>
+          </div>
         </div>
     </div>
 </div>
@@ -121,7 +131,9 @@
             <div class="check-container" *ngIf="this._verif.user != null">
                 <button [style.background-image]="this.listaUsuario.includes(creature.translations.spanish.replace(' ','')) ? 'url(../../assets/images/check-rojo.png)' : 'url(../../assets/images/check-gris.png)'" class="boton-imagen editar" (click)="toggleCheck(creature)"></button>
             </div>
-            <img (click)="mostrar(creature)" [src]="creature.critterpediaImage" style="cursor: pointer; max-height: 10vw; width: 8vw; padding-left: 2vw; padding-right: 2vw;" [id]='creature.translations.spanish.replace(" ", "")'>
+            <div style="width: 8vw; height: 8vw;" class="flex-centered">
+              <img (click)="mostrar($event, creature)" [src]="creature.critterpediaImage" style="cursor: pointer;max-width: 100%;max-height: 100%;" [id]='creature.translations.spanish.replace(" ", "")'>
+            </div>
             <span>{{creature.translations.spanish | capitalize}}</span>
         </div>
         </ng-container>
@@ -186,21 +198,32 @@
 
 </div>
     <!--   Pop-ups   -->
-<div class="oscuro" (click)="hide=true" [style.display]="hide ? 'none': 'block'"></div>
-<div class="panel" [style.display]="hide ? 'none': 'block'">
-    <div style="width: 100%; text-align: -webkit-center; display: flex; justify-content: space-around;">
-        <span class="spanImg" (click)="toggleHemisphere()" style="background-color:#67c13db5; cursor:pointer;">
-            <img [src]="isNorth ? '../../assets/images/hemisferio-norte.png' : '../../assets/images/hemisferio-sur.png'" class="imagenHemisferio">
-        </span>
-        <div class="grid-item-wrap flex-column-centered" style="width: fit-content;">
-            <img [src]="shownCreature.critterpediaImage" style="width: 9vw; padding: 1vw; max-height: 12vw;" [id]='shownCreature.translations.spanish.replace(" ", "")'>
+    <div class="panel flex-between" [style.display]="hide ? 'none': 'flex'" (clickOutside)="cierraMenu()">
+      <div class="flex-column-centered" style="margin-left:3vw;max-width: 60%;max-height: 31vw;">
+        <div class="flex-column-centered">
+          <img [src]="shownCreature.critterpediaImage" style="max-width: 100%;max-height: 10vw" [id]='shownCreature.translations.spanish.replace(" ", "")'>
+          <p><strong>{{shownCreature.translations.spanish | capitalize}}</strong></p>
         </div>
+        <div>
+          <p><strong>Donde obtener:</strong> {{shownCreature.whereHow | traducirPez | capitalize}}</p>
+          <p><strong>Sombra:</strong> {{shownCreature.shadow | traducirPez | capitalize}}</p>
+          <p><strong>Precio:</strong> {{shownCreature.sell}}</p>
+          <div style="display: flex;">
+            <span><strong>Horario:</strong></span>
+            <div class="flex-column-centered" style="margin-left: 0.4vw;">
+              <ng-container *ngFor="let hora of this.shownCreatureHoras">
+                <span>{{hora | traducirPez}}</span>
+              </ng-container>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex-column-centered">
+        <ng-container *ngFor="let mes of meses | keyvalue">
+          <span class="boton-alargado no-pointer" style="margin: 0.2vw 0;width: 100%;" [class]="shownCreatureMeses.includes(mes.key)? 'b-verde' : 'b-azul'">{{mes.value}}</span>
+        </ng-container>
+      </div>
+
     </div>
-    <div class="datos"><b>Nombre:</b> {{shownCreature.translations.spanish | capitalize}}</div>
-    <div class="datos"><b>Donde obtener:</b> {{shownCreature.whereHow | traducirPez | capitalize}}</div>
-    <div class="datos"><b>Sombra:</b> {{shownCreature.shadow | traducirPez | capitalize}}</div>
-    <div class="datos"><b>Precio:</b> {{shownCreature.sell}}</div>
-    <div class="datos"><b>Meses capturable:</b> {{((isNorth) ? shownCreature.hemispheres.north.monthsArray : shownCreature.hemispheres.south.monthsArray) | mesesTextuales}}</div>
-    <div class="datos" style="margin-bottom: 0px;"><b>Horario de captura:</b> {{((isNorth) ? shownCreature.hemispheres.north.time : shownCreature.hemispheres.south.time) | traducirPez}}</div>
-</div>
 
